--- a/clientCSS/lobby.css
+++ b/clientCSS/lobby.css
@@ -45,6 +45,8 @@ h1, h2, h3 {
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
+  margin-top: 50px;
+  margin-bottom: 30px;
 }
 
 .loader {
