--- a/clientCSS/lobby.scss
+++ b/clientCSS/lobby.scss
@@ -22,6 +22,8 @@
     display: flex;
     align-items: center;
     justify-content: center;
+    margin-top: 50px;
+    margin-bottom: 30px;
 }
 
 .loader {
